test/compile-errors/extern-type-errors.crow
main nat64^(_ string[])
	()

a extern

r record
	a a

b[t] extern
